# PRAW

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.qwen/: settings.json
.web-builder/: design_tokens.json  feature_list.json  mac-baseline-audit.md  mac-release-workflow.md  progress.md  spec.md  sprint_1_contract.md  sprint_plan.json
docs/: installing-macos.md  releasing.md
project-insights/: ghost-completion-highlights.md  ui-theme-highlights.md  why-multi-container-tree.md  why-tauri-react-rust.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  events.rs  lib.rs  main.rs  release.rs  timer_sound.rs
src-tauri/src/ai/: mod.rs  provider.rs  registry.rs  types.rs
src-tauri/src/ai/providers/: anthropic.rs  deepseek.rs  doubao.rs  gemini.rs  glm.rs  mod.rs  openai.rs  openai_compatible.rs  qwen.rs  xai.rs
src-tauri/src/commands/: ai.rs  bootstrap.rs  completion.rs  mod.rs  release.rs  terminal.rs  timer.rs  voice.rs
src-tauri/src/completion/: learning_store.rs  mod.rs  parser.rs
src-tauri/src/config/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/terminal/: agent_bridge.rs  agent_bridge_test.rs  codex_sessions.rs  codex_sessions_test.rs  manager.rs  mod.rs  semantic.rs  session.rs  shell_integration.rs  shell_integration_test.rs  structured_codex.rs  structured_provider.rs  structured_qwen.rs  structured_runtime.rs  structured_runtime_test.rs
src-tauri/src/voice/: mod.rs  normalize.rs  preset.rs  vocabulary.rs
src-tauri/src/workspace/: mod.rs
(+287 files in other folders)
